✨ Add assets and structure last steps in the second section

--- a/src/styles/settings/_reset.scss
+++ b/src/styles/settings/_reset.scss
@@ -203,7 +203,7 @@ sup {
   vertical-align: baseline;
   font-family: inherit;
   font-weight: inherit;
-  color: inherit;
+  color: inherit !important;
 }
 
 sub {
