--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -139,4 +139,18 @@
     min-width: 220px;
   }
 
+  &--custom-bg {
+    &--only-desktop {
+      @media screen and (max-width: 768px) {
+        display: none;
+      }
+    }
+
+    &--only-mobile {
+      @media screen and (min-width: 769px) {
+        display: none;
+      }
+    }
+  }
+
 }
