--- a/src/pages/identifying-hpp.astro
+++ b/src/pages/identifying-hpp.astro
@@ -418,20 +418,22 @@ const internalNavLinks = [
                 <h2 class="genetic-testing-role__title white-title color--white">
                     The role of genetic testing
                 </h2>
-                <p>
+                <p class="mb-1 md:text--center genetic-testing-role__paragraph">
                     <span class="color--saffron-mango">
                         Genetic testing rules in hypophosphatasia;
                         it does not rule it out<sup>17,18</sup>
                     </span>
                 </p>
-                <p class="color--white">
+                <p class="color--white mb-1 md:text--center genetic-testing-role__paragraph">
                     Insurance requirements and/or coverage for genetic testing vary by state and insurance provider. Verify with the patient’s insurer to understand which type of services will be covered.
                 </p>
-                <p class="color--white">
+                <p class="color--white mb-1 md:text--center genetic-testing-role__paragraph">
                     While genetic testing for hypophosphatasia can be a useful tool, it remains an evolving science with certain limitations and challenges.
                 </p>
             </div>
-            <div class="red-string"></div>
+           <div class="line-container">
+            <div class="red-string first"></div>
+           </div>
             <div class="kpi">
                 <div class="kpi__number">
                     <picture>
@@ -441,50 +443,64 @@ const internalNavLinks = [
                 </div>
                 <div class="kpi__content">
                     <p class="color--white text--center font--special-elite">
-                        Since its initial discovery in 1988, the number of ALPL gene mutations have increased with over 400 identified; new discoveries are ongoing<sup>11,19-23</sup>
+                        Since its initial discovery in 1988, the number of <span class="text--italic font--50">ALPL</span> gene mutations have increased with over 400 identified; new discoveries are ongoing<sup>11,19-23</sup>
                     </p>
                 </div>
             </div>
-            <div class="red-string"></div>
+            <div class="line-container">
+                <div class="red-string second"></div>
+            </div>
             <article class="additional-limitations">
                 <div class="additional-limitations__left">
-
+                    <div class="additional-limitations__family">
+                        <div class="additional-limitations__family-content">
+                            <p>
+                                <strong>Family members</strong> with hypophosphatasia who have identical genotypes may express varying phenotypes due to factors beyond the ALPL gene mutation (eg, number of mutant enzyme synthesized, alkaline phosphate enzymatic activity).<sup>25-27</sup>
+                            </p>
+                        </div>
+                    </div>
                 </div>
                 <div class="additional-limitations__rigth">
-                    <p class="additional-limitations__title color--buff">
-                        Additional limitations<sup>17,23,24</sup>
-                    </p>
-
-                    <ul>
-                        <li class="color--white">restrictive costs/affordability</li>
-                        <li class="color--white">diagnostic services only available at certain laboratories</li>
-                        <li class="color--white">not all ALPL variants necessarily lead to the manifestation of hypophosphatasia or establish hypophosphatasia</li>
-                        <li class="color--white">diagnostic sensitivity of genetic tests that detect ALPL can vary by laboratory</li>
-                        <li class="color--white">
-                            ALPL sequencing is predicted to detect pathogenic variants of ~95% of severe perinatal and infantile hypophosphatasia cases; in milder forms, the detection rate is difficult to estimate
-                        </li>
-                        <li class="color--white">the milder the disease, the higher the likelihood that only one ALPL pathogenic variant is detected</li>
-                    </ul>
+                    <div class="wrapper">
+                        <p class="additional-limitations__title color--buff">
+                            Additional limitations<sup>17,23,24</sup>
+                        </p>
+    
+                        <ul class="additional-limitations__list">
+                            <li class="color--white">restrictive costs/affordability</li>
+                            <li class="color--white">diagnostic services only available at certain laboratories</li>
+                            <li class="color--white">not all <span class="text--italic">ALPL</span> variants necessarily lead to the manifestation of hypophosphatasia or establish hypophosphatasia</li>
+                            <li class="color--white">diagnostic sensitivity of genetic tests that detect <span class="text--italic">ALPL</span> can vary by laboratory</li>
+                            <li class="color--white">
+                                <span class="text--italic">ALPL</span> sequencing is predicted to detect pathogenic variants of ~95% of severe perinatal and infantile hypophosphatasia cases; in milder forms, the detection rate is difficult to estimate
+                            </li>
+                            <li class="color--white">the milder the disease, the higher the likelihood that only one <span class="text--italic">ALPL</span> pathogenic variant is detected</li>
+                        </ul>
+                    </div>
                 </div>
             </article>
-            <div class="red-string"></div>
+            <div class="line-container">
+                <div class="red-string third"></div>
+            </div>
             <div class="has-vus">
-                <h2 class="has-vus__title white-title color--white">
-                    If your patient has a variant of uncertain significance (VUS)
-                </h2>
-                <p class="color--white">
-                    If the classification of the variant is VUS, it means that at the time of interpretation, there was insufficient evidence to determine if the variant was related to disease or not.<sup>28</sup>
-                </p>
-                <div class="has-vus__quote">
-                    <p class="color--white text--center font--special-elite">
-                        “According to the American College of Medical Genetics and Genomics, a VUS should not be used in clinical decision-making. If a patient is identified to have a VUS, all clinical decisions should be based on personal and family history and not on the presence of the VUS.”
-
-                        
+                <div class="wrapper">
+                    <h2 class="has-vus__title white-title color--white">
+                        If your patient has a variant of uncertain significance (VUS)
+                    </h2>
+                    <p class="color--white">
+                        If the classification of the variant is VUS, it means that at the time of interpretation, there was insufficient evidence to determine if the variant was related to disease or not.<sup>28</sup>
                     </p>
-                    <p class="color--white text--center">-Jennifer Schleit, PhD, Senior Geneticist</p>
-                    <p class="color--saffron-mango text--center font--special-elite">
-                        A VUS may be related to hypophosphatasia and does not rule out the diagnosis.<sup>29</sup>
-                    </p>
+                    <div class="has-vus__quote">
+                        <p class="color--white text--center font--special-elite">
+                            “According to the American College of Medical Genetics and Genomics, a VUS should not be used in clinical decision-making. If a patient is identified to have a VUS, all clinical decisions should be based on personal and family history and not on the presence of the VUS.”
+    
+                            
+                        </p>
+                        <p class="color--white text--center">-Jennifer Schleit, PhD, Senior Geneticist</p>
+                        <p class="color--saffron-mango text--center font--special-elite">
+                            A VUS may be related to hypophosphatasia and does not rule out the diagnosis.<sup>29</sup>
+                        </p>
+                    </div>
                 </div>
             </div>
         </article>
