--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1556,12 +1556,12 @@
 
         // padding-top: 5rem;
 
-        * {
-            color: $color-carbon;
-        }
-
 
         .mobile-content {
+
+            * {
+                color: $color-carbon;
+            }
 
             &::before {
                 content: "";
@@ -1588,6 +1588,10 @@
 
             @media screen and (min-width: 1024px) {
                 display: block;
+            }
+
+            * {
+                color: $color-carbon;
             }
 
             .substrate-testing__title,
@@ -1729,6 +1733,188 @@
             line-height: 18.2px;
 
             padding-bottom: 5rem;
+        }
+
+        .genetic-testing-role {
+
+            .white-title {
+                text-transform: uppercase;
+                font-family: "oswald", sans-serif;
+                font-weight: 700;
+                font-size: 1.5rem;
+                line-height: 30px;
+                margin-bottom: 1rem;
+
+                @media screen and (min-width: 768px) {
+                    text-align: center;
+                }
+            }
+
+            .genetic-testing-role__paragraph {
+                @media screen and (min-width: 768px) {
+
+                    margin-left: auto;
+                    margin-right: auto;
+                    
+                    &:first-of-type {
+                        max-width: 21.5625rem;
+                    }
+
+                    &:nth-child(3),
+                    &:last-of-type {
+                        max-width: 24.0625rem;
+                    }
+                }
+            }
+
+            .line-container {
+                position: relative;
+                width: 100%;
+
+                height: 3rem;
+
+                .red-string {
+                    position: absolute;
+                    width: calc(100vw + 20rem);
+
+                    top: 50%;
+                    left: 50%;
+
+                    transform: translate(-50%, -50%);
+
+                    &.first {
+                        top: auto;
+                        bottom: 0;
+
+                        transform: translateX(-50%) rotate(-15deg);
+                    }
+
+                    &.second {
+                        transform: translate(-50%, -50%) rotate(-3deg);
+                    }
+
+                    &.third {
+                        transform: translate(-50%, -50%) rotate(-5deg);
+                    }
+                }
+            }
+
+            .kpi {
+
+                .kpi__number {
+                    width: 5.3881rem;
+                    margin-left: auto;
+                    margin-right: auto;
+
+                    position: relative;
+
+                    p {
+                        position: absolute;
+                        left: 50%;
+                        bottom: 0;
+                        transform: translateX(-50%);
+                        line-height: 90%;
+
+                        letter-spacing: -3px;
+
+                        font-size: 4.5rem;
+                        font-weight: 400;
+
+                        &::before {
+                            content: url("/assets/images/identifying-hpp/up-arrow-red.svg");
+                            max-width: fit-content;
+                            margin-left: auto;
+                            margin-right: auto;
+
+                            margin-bottom: .25rem;
+                        }
+                    }
+                }
+
+                .kpi__content {
+
+                    width: 100%;
+                    max-width: 80%;
+
+                    margin-left: auto;
+                    margin-right: auto;
+
+                    p {
+                        line-height: 1.5rem;
+                    }
+
+                    @media screen and (min-width: 768px) {
+                        max-width: 32.5rem;
+                    }
+                }
+            }
+
+            .additional-limitations {
+
+                .additional-limitations__left {
+                    margin-bottom: 1.5rem;
+                }
+
+                .additional-limitations__family {
+
+                    .additional-limitations__family-content {
+                        background-image: url("/assets/images/identifying-hpp/family-members-bg.png");
+                        background-repeat: no-repeat;
+                        background-size: 100% 100%;
+
+                        width: 100%;
+                        max-width: 19.1875rem;
+                        margin-left: auto;
+                        margin-right: auto;
+
+                        padding: 3.125rem 1.6875rem;
+
+                        position: relative;
+
+                        margin-top: 2rem;
+
+                        &::before {
+                            content: "";
+                            background-image: url("/assets/images/identifying-hpp/papers-tape.png");
+                            background-size: contain;
+
+                            width: 14.5625rem;
+                            height: 4.5rem;
+
+                            position: absolute;
+
+                            left: 50%;
+                            top: -2rem;
+                            transform: translateX(-50%);
+                        }
+                    }
+                }
+
+                .additional-limitations__title {
+                    font-weight: 700;
+                    margin-bottom: 1.5rem;
+                }
+
+                .additional-limitations__list {
+                    margin-left: 1.5rem;
+
+                    li{
+                        line-height: 22.4px;
+
+                        &::marker {
+                            color: $color-white;
+                        }
+                    }
+                }
+            }
+
+            .has-vus {
+
+                p {
+                    margin-bottom: 1.5rem;
+                    line-height: 22.4px;
+                }
+            }
         }
     }
 }
